update api + test user
